--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,7 +13,7 @@
       <div class="add-item">
         <button ng-click="showMorePositions = !showMorePositions"><i class="icon-plus"></i><span>Añadir</span></button>
         <ul ng-class="{expanded: showMorePositions}" ng-mouseleave = "showMorePositions = false" ng-click="showMorePositions = false">
-          <li ng-repeat="position in hiddenPositions" ng-click="show(position, $index, $parent.hiddenPositions)">
+          <li ng-repeat="position in profile.positions.values" ng-show="position.hide" ng-click="position.hide = false">
             <i class="icon-restore"></i>
             <span>{{position.company.name}}</span>
             <span>{{position.title}}</span> 
@@ -22,13 +22,13 @@
         </ul>
       </div>
     </header>
-    <ul class="item-list" ng-hide="hidePositions">
+    <ul class="item-list">
       <li class="position-item" ng-repeat="position in profile.positions.values" ng-if="!position.hide">
         <header>
           <h3 class="company" contentEditable="true" ng-model="position.company.name"></h3><span class="title" contentEditable="true" ng-model="position.title"></span>
         </header>
         <pre class="summary" contentEditable="true" ng-model="position.summary"></pre>
-        <i class="icon-remove" ng-click="hide(position, $parent.hiddenPositions)"></i>
+        <i class="icon-remove" ng-click="position.hide = true"></i>
       </li>
     </ul>
   </section>
@@ -38,7 +38,7 @@
       <div class="add-item">  
         <button ng-click="showMoreEducations = !showMoreEducations"><i class="icon-plus"></i><span>Añadir</span></button>
         <ul ng-class="{expanded: showMoreEducations}" ng-mouseleave = "showMoreEducations = false" ng-click="showMoreEducations = false">
-          <li ng-repeat="education in hiddenEducations" ng-click="show(education, $index, $parent.hiddenEducations)">
+          <li ng-repeat="education in profile.educations.values" ng-show="education.hide" ng-click="education.hide = false">
             <i class="icon-restore"></i>
             <span>{{education.degree}}</span>
           </li>
@@ -50,7 +50,7 @@
       <li class="education-item" ng-repeat="education in profile.educations.values" ng-if="!education.hide">
         <span contentEditable="true" ng-model="education.degree"></span>
         <span contentEditable="true" ng-model="education.schoolName"></span>
-        <i class="icon-remove" ng-click="hide(education, $parent.hiddenEducations)"></i>
+        <i class="icon-remove" ng-click="education.hide = true"></i>
       </li>
     </ul>
     
@@ -61,7 +61,7 @@
       <div class="add-item">  
         <button ng-click="showMoreSkills = !showMoreSkills"><i class="icon-plus"></i><span>Añadir</span></button>
         <ul ng-class="{expanded: showMoreSkills}" ng-mouseleave = "showMoreSkills = false" ng-click="showMoreSkills = false">
-          <li ng-repeat="skill in hiddenSkills" ng-click="show(skill, $index, $parent.hiddenSkills)">
+          <li ng-repeat="skill in profile.skills.values" ng-show="skill.hide" ng-click="skill.hide = false">
             <i class="icon-restore"></i>
             <span>{{skill.skill.name}}</span>
           </li>
@@ -70,7 +70,7 @@
       </div>  
     </header>
     <ul class="item-list">
-      <li class="skill-item" ng-repeat="skill in profile.skills.values" ng-hide="skill.hide"><span contentEditable="true" ng-model="skill.skill.name"></span><i class="icon-remove" ng-click="hide(skill, $parent.hiddenSkills)"></i></li>
+      <li class="skill-item" ng-repeat="skill in profile.skills.values" ng-hide="skill.hide"><span contentEditable="true" ng-model="skill.skill.name"></span><i class="icon-remove" ng-click="skill.hide = true"></i></li>
     </ul>
     
   </section>
